<resources>
    <string name="app_name">GoMeet</string>
    <string name="chat_api_key">e43k9kfvgyze</string>
    <string name="title_activity_channel">ChannelActivity</string>
    <string name="recommended">Recommended</string>
    <string name="events">Events</string>
    <string name="participants_button">"Manage Participants"</string>
    <string name="tag_sort">By common tags</string>
    <string name="log_in_button">Log In</string>
    <string name="post_event_button">Post</string>
    <string name="follow_button">Follow</string>
    <string name="unfollow_button">Unfollow</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_following">Following</string>
    <string name="delete_event">Delete Event</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="posts">Posts</string>
    <string name="add_post">Add a Post</string>
    <string name="new_post_placeholder_text">What\'s new ?</string>
    <string name="post_button">Post</string>
    <string name="delete_post">Delete Post</string>
    <string name="edit_event_button">Edit My Event</string>
    <string name="manage_invites">Manage Invites</string>
    <string name="manage_invites_pending">Pending</string>
    <string name="manage_invites_accepted">Accepted</string>
    <string name="manage_invites_refused">Refused</string>
    <string name="manage_invites_to_invite">To Invite</string>
    <string name="invite_button">Invite</string>
    <string name="cancel_button">Cancel</string>
    <string name="create_public_event_button">Public</string>
    <string name="create_private_event_button">Private</string>
    <string name="search_bar_placeholder">Search</string>
    <string name="add_participants">Add Participants</string>
    <string name="add_image">Add Image</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="email_text_field">Email</string>
    <string name="password_text_field">Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="username_text_field">Username</string>
    <string name="confirm_password_text_field">Confirm Password</string>
    <string name="first_name_text_field">First Name</string>
    <string name="first_name_text_field_error">First Name is not valid</string>
    <string name="last_name_text_field">Last Name</string>
...
