...
                // Empty title since we're placing our own components
              },
              navigationIcon = {
                IconButton(onClick = { nav.goBack() }) {
                  Icon(
                      imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                      contentDescription = "Back",
                      tint = MaterialTheme.colorScheme.onBackground)
                }
              },
              actions = {
                if (organiser.value!!.uid == currentUser.value!!.uid) {
                  IconButton(onClick = { showDeleteEventDialog = true }) {
                    Icon(
                        imageVector = Icons.Default.Delete,
                        contentDescription = "Delete",
                        tint = MaterialTheme.colorScheme.onBackground,
                        modifier = Modifier.size(24.dp))
                  }
                }

                IconButton(onClick = { showShareEventDialog = true }) {
...
            Column(
                modifier =
                    Modifier.padding(innerPadding)
                        .padding(horizontal = 10.dp)
                        .fillMaxSize()
                        .verticalScroll(state = rememberScrollState())) {
                  EventHeader(
                      eventViewModel = eventViewModel,
                      event = myEvent.value!!,
                      rating = ratingState,
                      nav = nav,
                      organiser = organiser.value!!)
                  Spacer(modifier = Modifier.height(20.dp))
...
                              onClick = { addPost = true },
                              shape = RoundedCornerShape(10.dp),
                              colors =
                                  ButtonDefaults.buttonColors(
                                      containerColor = MaterialTheme.colorScheme.outlineVariant)) {
                                Icon(
                                    Icons.Filled.Add, contentDescription = "Add Post", tint = White)
                              }
                        }
                      }

                  if (posts.isEmpty()) {
                    Spacer(Modifier.height(10.dp))
                    Text(
                        text = "No updates about this event at the moment.",
                        color = MaterialTheme.colorScheme.tertiary,
                        modifier =
                            Modifier.align(Alignment.CenterHorizontally).testTag("NoPostsText"),
                        style = MaterialTheme.typography.bodyLarge)
                    Spacer(Modifier.height(screenHeight / 50))
                  } else {
                    Spacer(Modifier.height(10.dp))
                    posts.reversed().forEach { post ->
                      key(post.date.toString() + post.time.toString()) {
...
                      containerColor = MaterialTheme.colorScheme.primaryContainer)) {
                Text("Cancel", color = MaterialTheme.colorScheme.onBackground)
              }
        },
        title = { Text(title) },
        text = {
          Text(confirmationMessage, modifier = Modifier.testTag("DeleteEventConfirmationText"))
        },
        containerColor = MaterialTheme.colorScheme.background,
    )
  }
}

