...
                    if (currentUser == post.userId) {
                      nav.navigateToScreen(Route.PROFILE)
                    } else {
                      nav.navigateToScreen(Route.OTHERS_PROFILE.replace("{uid}", post.userId))
                    }
                  }
                  .testTag("EventPostUserInfo")) {
            ProfileImage(
                userId = poster!!.uid,
                modifier = Modifier.testTag("Event Post Profile Picture"),
                size = 50.dp)

            Column(
...
              liked = !liked
            }) {
              Row(verticalAlignment = Alignment.CenterVertically) {
                if (!liked) {
                  Icon(
                      Icons.Outlined.ThumbUp,
                      contentDescription = "Like",
                      tint = MaterialTheme.colorScheme.tertiary)
                  Spacer(modifier = Modifier.width(5.dp))
                  Text(
                      text = likes.toString(),
                      color = MaterialTheme.colorScheme.tertiary,
                      style = MaterialTheme.typography.bodyMedium)
...

        Spacer(modifier = Modifier.weight(1f))
        Text(
            text = "${event.getDateString()}, ${event.getTimeString()}",
            style = MaterialTheme.typography.bodyMedium,
            color = Grey,
            modifier = Modifier.testTag("PostDate"))
      }
    }
  }

  if (showDeletePostDialog) {
    DeletePostDialog(
...
            }
      },
      title = { Text("Delete Post") },
      text = {
        Text(
            "Are you sure you want to delete this post?",
            modifier = Modifier.testTag("DeletePostConfirmationText"))
      },
      containerColor = MaterialTheme.colorScheme.background,
  )
}

