...
              }
            }
            nav.goBack()
          }) {
            Icon(
                Icons.AutoMirrored.Filled.KeyboardArrowLeft,
                contentDescription = "Go back",
                tint = MaterialTheme.colorScheme.onBackground)
          }
    }
    Row(
        modifier = Modifier.fillMaxWidth(),
        verticalAlignment = Alignment.CenterVertically,
...
  val smallTextSize = with(density) { screenWidth.toPx() / 85 }
  val bigTextSize = with(density) { screenWidth.toPx() / 60 }

  val dayString = event.getDateString()
  val timeString = event.getTimeString()

  Card(
      modifier =
          Modifier.fillMaxWidth()
              .padding(start = 10.dp, top = 5.dp, end = 10.dp, bottom = 5.dp)
              .testTag("EventCard"),
      colors =
          CardDefaults.cardColors(containerColor = MaterialTheme.colorScheme.primaryContainer)) {
...
